# MCP342x

./: .gitignore  LICENSE  README.md  example.py  mcp342x.py  pyproject.toml
examples/: example.py  quick_example.py  scan.py
src/mcp342x/: __init__.py  mcp342x.py
